Closed
Bug 563642
Opened 16 years ago
Closed 16 years ago
PAGE_UP / PAGE_DOWN (PG_UP/PG_DOWN) does not work in <select multiple="multiple" size="1">
Categories
(Core :: Layout: Form Controls, defect)
Core
Layout: Form Controls
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a5
People
(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)
Details
(Keywords: testcase)
Attachments
(2 files)
|
173 bytes,
text/html
|
Details | |
|
5.60 KB,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
PAGE_UP / PAGE_DOWN does not work in <select multiple="multiple" size="1">
STEPS TO REPRODUCE
1. focus the element
2. type PAGE_UP or PAGE_DOWN
ACTUAL RESULTS
Nothing happens in 2
EXPECTED RESULTS
The list should scroll one item up or down and select it
EXAMPLE
<select multiple="multiple" size="1">
<option>Item 1</option>
<option>Item 2</option>
<option>Item 3</option>
<option>Item 4</option>
<option>Item 5</option>
</select>
| Assignee | ||
Comment 1•16 years ago
|
||
| Assignee | ||
Updated•16 years ago
|
Summary: PAGE_UP / PAGE_DOWN does not work in <select multiple="multiple" size="1"> → PAGE_UP / PAGE_DOWN (PG_UP/PG_DOWN) does not work in <select multiple="multiple" size="1">
Comment 2•16 years ago
|
||
So I believe we scroll by mDisplayRows-1, which in this case would be 0. We could make sure we scroll by at least 1, right?
| Assignee | ||
Comment 3•16 years ago
|
||
Right, NSMAX(1, ...) fixes it.
Assignee: nobody → matspal
Attachment #443535 -
Flags: review?(bzbarsky)
Comment 4•16 years ago
|
||
Comment on attachment 443535 [details] [diff] [review]
Patch rev. 1 with mochitest
r=bzbarsky
Attachment #443535 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Comment 5•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
OS: Linux → All
Hardware: x86_64 → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
You need to log in
before you can comment on or make changes to this bug.
Description
•