Make PAGE_UP/DOWN scroll at least 1 item, if possible.  b=563642 r=bzbarsky